--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <meta name="keywords" content="website developer,software developer,  php developer, Best php developer in lucknow ,web developer , Gaurav yadav php developer  - www.####.com " />
         <meta name="description" content="I am Md. Safiqul Islam,webmaster having penetrated skills in IT industry over long five years.My EXPERT Skills: Shopify/PHP/Codeigntier/Larvel/WordPress/Prestashop, Ajax, Mysql, PHP, Yii, JavaScript, Jquery, HTML5, CSS3, Less, Sass, Bootstrap, Photoshop, Illustrator, In-design."/>
     
-        <link rel="icon" href="images/mahadi.png" type="image/x-icon" />
+        <link rel="icon" href="images/Mahadi.png" type="image/x-icon" />
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,400i,500,500i,700,700i|Varela+Round" rel="stylesheet">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -57,7 +57,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <div class="profile-pic"> <img src="images/mahadi.jpg" class="img-responsive "> </div>
+                        <div class="profile-pic"> <img src="images/Mahadi.jpg" class="img-responsive "> </div>
                     </div>
                 </div>
                 <div class="row">
